--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vidly",
+  "name": "om",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,13 +7,17 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "om",
+  "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^1.0.3",
+    "config": "^1.29.4",
     "express": "^4.16.2",
     "fawn": "^2.1.5",
     "joi": "^13.1.0",
     "joi-objectid": "^2.0.0",
+    "jsonwebtoken": "^8.1.1",
+    "lodash": "^4.17.4",
     "mongoose": "^5.0.2"
   }
 }
